feat(core): major quality, performance, UI & infrastructure enhancements (v0.2.0-alpha.1)